// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppEditTabs should match a snapshot for the ac integration tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
         
        <a>
          see here.
        </a>
      </p>
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched as replacement screen from within AgencyCloud
      </p>
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              AgencyCloud Integration
            </label>
            <input
              class="e1ih6lkl-el-toggle-checkbox"
              id="app-edit-is-ac-inegrated"
              type="checkbox"
            />
            <label
              class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
              for="app-edit-is-ac-inegrated"
            >
              <span
                class="e18omfqv-el-toggle-item"
              >
                Yes
              </span>
              <span
                class="e18omfqv-el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
       
      <a>
        see here.
      </a>
    </p>
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched as replacement screen from within AgencyCloud
    </p>
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            AgencyCloud Integration
          </label>
          <input
            class="e1ih6lkl-el-toggle-checkbox"
            id="app-edit-is-ac-inegrated"
            type="checkbox"
          />
          <label
            class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
            for="app-edit-is-ac-inegrated"
          >
            <span
              class="e18omfqv-el-toggle-item"
            >
              Yes
            </span>
            <span
              class="e18omfqv-el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditTabs should match a snapshot for the app listing tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to sumbit your app for approval, it all needs to be completed.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
      >
        For information on listing your app 
        <a>
          see here
        </a>
        . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
         
        <a>
          here.
        </a>
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="name"
              placeholder="The name of your app as it will appear to users"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Name
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="supportEmail"
              placeholder="The contact to your support team if your users have a problem"
              type="email"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Support email
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="telephone"
              placeholder="Should one of our developers need to contact you about your app"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Telephone
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="homePage"
              placeholder="Your company homepage. HTTP:// or HTTPS://"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Home page
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="launchUri"
              placeholder="The launch page for your app. HTTPS only other than for http://localhost"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Launch URI
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="termsAndConditionsUrl"
              placeholder="URL to link to your Terms and Conditions"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Terms and Conditions
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="privacyPolicyUrl"
              placeholder="URL to link to your Privacy Policy"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Privacy Policy
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="pricingUrl"
              placeholder="URL to link to your Pricing Info"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Pricing Info
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="isFree"
              type="checkbox"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              This application is free
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        />
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="summary"
              placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Summary
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Description
          </label>
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Icon Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
              >
                Dimensions: 96px x 96px
              </p>
            </div>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Featured Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
              >
                Dimensions: 495px x 222px
              </p>
            </div>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
              >
                Dimensions: 598px x 457px
              </p>
            </div>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
              >
                Dimensions: 598px x 457px
              </p>
            </div>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
              >
                Dimensions: 598px x 457px
              </p>
            </div>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
              >
                Dimensions: 598px x 457px
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to sumbit your app for approval, it all needs to be completed.
    </p>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
    >
      For information on listing your app 
      <a>
        see here
      </a>
      . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
       
      <a>
        here.
      </a>
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="name"
            placeholder="The name of your app as it will appear to users"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Name
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="supportEmail"
            placeholder="The contact to your support team if your users have a problem"
            type="email"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Support email
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="telephone"
            placeholder="Should one of our developers need to contact you about your app"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Telephone
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="homePage"
            placeholder="Your company homepage. HTTP:// or HTTPS://"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Home page
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="launchUri"
            placeholder="The launch page for your app. HTTPS only other than for http://localhost"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Launch URI
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="termsAndConditionsUrl"
            placeholder="URL to link to your Terms and Conditions"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Terms and Conditions
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="privacyPolicyUrl"
            placeholder="URL to link to your Privacy Policy"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Privacy Policy
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="pricingUrl"
            placeholder="URL to link to your Pricing Info"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Pricing Info
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="isFree"
            type="checkbox"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            This application is free
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      />
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="summary"
            placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Summary
          </label>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <label
          class="e1nbkkrq-el-label"
        >
          Description
        </label>
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Icon Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
            >
              Dimensions: 96px x 96px
            </p>
          </div>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Featured Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
            >
              Dimensions: 495px x 222px
            </p>
          </div>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
            >
              Dimensions: 598px x 457px
            </p>
          </div>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
            >
              Dimensions: 598px x 457px
            </p>
          </div>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
            >
              Dimensions: 598px x 457px
            </p>
          </div>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
            >
              Dimensions: 598px x 457px
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditTabs should match a snapshot for the authentication tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        When using the Reapit Connect
         
        <a>
          Authorization Code flow,
        </a>
         you need to register both a re-direct uri and a logout uri. The former is the location in your app, you want Reapit Connect to re-direct to after a successful user login, the latter, after a succesful logout. Only uris that are registered here will be accepted as a location by Reapit Connect although, you can register multiple locations with a comma separated list.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="redirectUris"
              placeholder="Enter your Redirect URI(s)"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Redirect URI(s)
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="signoutUris"
              placeholder="Enter your Sign Out URI(s)"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Sign Out URI(s)
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      When using the Reapit Connect
       
      <a>
        Authorization Code flow,
      </a>
       you need to register both a re-direct uri and a logout uri. The former is the location in your app, you want Reapit Connect to re-direct to after a successful user login, the latter, after a succesful logout. Only uris that are registered here will be accepted as a location by Reapit Connect although, you can register multiple locations with a comma separated list.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="redirectUris"
            placeholder="Enter your Redirect URI(s)"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Redirect URI(s)
          </label>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="signoutUris"
            placeholder="Enter your Sign Out URI(s)"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Sign Out URI(s)
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditTabs should match a snapshot for the general tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e20pb60-el-grid"
      >
        <div
          class="eb3z2eu-el-col-split"
        >
          <div
            class="e1ffzzrg-el-mb10 i1x34gqf-icon-container"
          >
            <span
              class="ej9yrfo-el-icon"
              style="font-size: 8.75em;"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 80 80"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M40.3202 12.4506C39.78 9.09117 36.7564 6.5127 33.1128 6.5127C31.7421 6.5127 30.4244 6.87747 29.2808 7.55784C27.5474 4.74831 24.4214 3 20.9454 3C15.5756 3 11.1999 7.2022 11.1914 12.3672C11.1914 12.3992 11.1913 12.4324 11.1925 12.4644C7.74046 13.0235 5.01784 15.9176 5.01213 19.3926C5.00577 23.2666 8.35804 26.418 12.3857 26.418H39.1667C43.1943 26.418 46.5569 23.2666 46.5633 19.3926C46.5691 15.8879 43.812 12.9755 40.3202 12.4506Z"
                  fill="white"
                />
                <path
                  d="M52.9194 71.8579C52.9194 70.7641 52.0332 69.8779 50.9401 69.8779H50.1045V50.7123C49.0773 50.7123 48.1052 50.3773 47.296 49.8125C46.752 50.196 46.1259 50.4794 45.4318 50.6171C45.1143 50.6806 44.7903 50.7123 44.4701 50.7123C44.2566 50.7123 44.0517 50.6837 43.8439 50.6566L34.6178 50.4821C34.1688 50.6165 33.7019 50.7116 33.209 50.7116C32.7174 50.7116 32.251 50.6166 31.8015 50.4821L22.5753 50.6567C22.3684 50.6838 22.162 50.7124 21.9487 50.7124C21.6305 50.7124 21.3076 50.6806 20.9836 50.6166C20.2915 50.4788 19.6666 50.1961 19.122 49.8126C18.3129 50.3773 17.3427 50.7124 16.3162 50.7124L16.3156 69.878H15.4799C14.3861 69.878 13.5 70.7642 13.5 71.858C13.5 72.9518 14.3861 73.8379 15.4799 73.8379H50.94C52.0332 73.8378 52.9194 72.9517 52.9194 71.8579Z"
                  fill="#0061A8"
                />
                <path
                  d="M10.2472 55.1588C10.6472 55.2761 11.0512 55.3319 11.4492 55.3319C13.2556 55.3319 14.9242 54.1771 15.4679 52.3889L15.6886 51.6646C15.838 52.9796 16.6208 54.1383 17.7919 54.7868C18.1697 54.9931 18.5726 55.1635 19.0199 55.2506C19.2965 55.3057 19.5722 55.3319 19.8431 55.3319C21.8047 55.3319 23.5582 53.9754 23.9544 52.0138L24.0567 51.5113C24.1616 52.9094 24.9772 54.1411 26.1897 54.8066C26.6765 55.0746 27.2242 55.2515 27.816 55.3103C27.9576 55.3254 28.0984 55.3312 28.2371 55.3312C30.3667 55.3312 32.1914 53.7445 32.4081 51.6182L32.4391 51.3124C32.4775 52.8137 33.3335 54.1022 34.5867 54.7913C35.192 55.1247 35.8811 55.3311 36.6235 55.3311C37.3685 55.3311 38.0568 55.1247 38.6621 54.7913C39.9143 54.1022 40.7712 52.8137 40.8108 51.3124L40.8406 51.6182C41.0576 53.7444 42.8813 55.3312 45.0116 55.3312C45.1513 55.3312 45.2912 55.3254 45.4329 55.3103C46.0238 55.2515 46.5715 55.0746 47.06 54.8066C48.2718 54.1411 49.0883 52.9094 49.1912 51.5113L49.2935 52.0138C49.6915 53.9762 51.444 55.3319 53.4047 55.3319C53.6765 55.3319 53.9512 55.3056 54.2289 55.2506C54.6741 55.1635 55.079 54.9931 55.4551 54.7868C56.6281 54.1382 57.4109 52.9796 57.5603 51.6646L57.7809 52.3889C58.3247 54.1771 59.9932 55.3319 61.8005 55.3319C62.1978 55.3319 62.6017 55.2761 63.0016 55.1588C65.2236 54.5073 66.4863 52.2108 65.8232 50.0307L62.2344 38.2361C61.4847 35.771 59.1759 34.082 56.557 34.082H16.6931C14.0729 34.082 11.7643 35.771 11.0145 38.2361L7.42652 50.0307C6.7634 52.211 8.02633 54.5074 10.2472 55.1588Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M69.2628 76.3422H40.55C38.0412 76.3361 36.0067 74.3021 36 71.7934V11.2266C36.0067 8.71826 38.0405 6.68447 40.5489 6.67773H69.2639C71.7722 6.68447 73.8059 8.7181 73.8128 11.2263C73.8128 11.2268 73.8128 11.2273 73.8128 11.2278V71.7934C73.8128 71.7939 73.8128 71.7943 73.8128 71.7947C73.8045 74.304 71.7715 76.3361 69.2628 76.3422Z"
                  fill="#23A4DE"
                  stroke="#262F69"
                  stroke-width="2"
                />
                <path
                  d="M69.2652 77.3427H40.5476C37.488 77.3352 35.0074 74.8547 35 71.795V64.7686C53.2926 64.7685 58.5345 64.7686 74.8128 64.7686V71.7969C74.8035 74.8566 72.3249 77.3352 69.2652 77.3427Z"
                  fill="#31448F"
                />
                <rect
                  fill="white"
                  height="22"
                  rx="11"
                  width="22"
                  x="42"
                  y="15"
                />
                <rect
                  fill="#F2F2F2"
                  height="8.95809"
                  rx="1"
                  width="25.0827"
                  x="42.168"
                  y="48.9014"
                />
                <rect
                  fill="#F2F2F2"
                  height="3.58324"
                  rx="1"
                  width="17.9162"
                  x="42.168"
                  y="43"
                />
                <rect
                  fill="#F2F2F2"
                  height="6"
                  rx="1"
                  width="9"
                  x="22"
                  y="58"
                />
                <g
                  clip-path="url(#clip0_7573_98455)"
                >
                  <path
                    d="M53.5 24.5L54.5 20.5L49 14L44.5 15L21.5 38L20.5 40.5L27 49L31 48L53.5 24.5Z"
                    fill="white"
                  />
                  <path
                    d="M21.0508 38.117L43.8641 15.287C44.0991 15.0503 44.4174 14.917 44.7491 14.917H44.7508C45.0824 14.917 45.4008 15.0487 45.6341 15.2837L53.7175 23.367C53.9525 23.602 54.0841 23.9203 54.0841 24.2503C54.0841 24.582 53.9525 24.9003 53.7175 25.1353L30.8841 47.952L21.0508 38.117Z"
                    fill="#FFB71B"
                  />
                  <path
                    d="M54.6137 21.905L55.4354 21.0834C56.4437 20.0734 57.0004 18.7417 57.0004 17.3334C57.0004 15.8934 56.4404 14.5534 55.4387 13.57C53.4354 11.5467 49.9137 11.5484 47.9154 13.5667L47.0938 14.3884L54.6137 21.905Z"
                    fill="#FFB71B"
                  />
                  <path
                    d="M20.3735 39.7969L17.0568 50.3769C16.9185 50.8202 17.0368 51.3052 17.3668 51.6335C17.6035 51.8719 17.9235 52.0002 18.2502 52.0002C18.3752 52.0002 18.5002 51.9819 18.6252 51.9435L29.2035 48.6269L20.3735 39.7969Z"
                    fill="#FFB71B"
                  />
                  <path
                    d="M28.6165 26.6469C28.9365 26.6469 29.2565 26.5253 29.4998 26.2803L37.5698 18.2103C38.0015 17.7803 38.5781 17.6103 39.1432 17.6519L41.1165 15.6769C39.4098 14.7636 37.2398 15.0053 35.8015 16.4419L27.7315 24.5119C27.2432 25.0003 27.2432 25.7919 27.7315 26.2803C27.9765 26.5236 28.2948 26.6469 28.6165 26.6469Z"
                    fill="#FFB71B"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0_7573_98455"
                  >
                    <rect
                      fill="white"
                      height="40"
                      transform="translate(17 12)"
                      width="40"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
          </div>
          <h2
            class="e1byern-el-subtitle"
          >
            Manage App Listing
          </h2>
          <p
            class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
          >
            This page is the starting point for completing your app listing, and initiating the approvals process for your app to go live with customer data.
          </p>
          <p
            class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
          >
            As an app developer, you need to provide us with a number of peices of information about your integration and have it approved by our team, prior to going live with customer data. For apps that wish to integrate with the AgencyCloud CRM, and be publically listed in the AppMarket, the approvals process is more involved than for simple server-side or single customer private apps. Regardless of your target audience, you should start to complete your app listing as soon as possible.
          </p>
          <p
            class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
          >
            You can check the status of your app listing at any time by using the button below, prior to submitting for approval.
          </p>
          <button
            class="epibvz0-el-intent-secondary e1f2ikqj-el-button"
          >
            Check Status
          </button>
        </div>
        <div
          class="eb3z2eu-el-col-split"
        >
          <div
            class="e1ffzzrg-el-mb10 i1x34gqf-icon-container"
          >
            <span
              class="ej9yrfo-el-icon"
              style="font-size: 8.75em;"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 80 81"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M68.0839 32.5781L39.9172 22.6511L11.7505 32.5781L39.9172 42.6555L68.0839 32.5781Z"
                  fill="#23A4DE"
                />
                <path
                  d="M68.0842 32.5781L39.9175 22.6511V42.6555L68.0842 32.5781Z"
                  fill="#0061A8"
                />
                <path
                  d="M50.5783 7.46606H28.611C26.4797 7.46606 24.7457 9.23906 24.7457 11.4178V58.7411C24.7457 60.9199 26.4797 62.6929 28.611 62.6929H50.5783C52.7097 62.6929 54.4441 60.9199 54.4441 58.7411V11.4178C54.4441 9.23906 52.7097 7.46606 50.5783 7.46606V7.46606Z"
                  fill="#262F69"
                />
                <path
                  d="M32.189 10.3965C31.9798 10.0786 31.8576 9.69614 31.8576 9.28426C31.8576 8.47572 32.3286 7.78095 33.0042 7.46606H28.6113C26.4764 7.46606 24.7455 9.2355 24.7455 11.4178V58.7411C24.7455 60.9235 26.4764 62.6924 28.6113 62.6924H33.2815V13.8597C33.2815 12.6169 32.8676 11.428 32.189 10.3965Z"
                  fill="#262F69"
                />
                <path
                  d="M26.9832 32.426V58.7411C26.9832 59.6603 27.712 60.4054 28.6108 60.4054H50.578C51.4768 60.4054 52.2056 59.6603 52.2056 58.7411C52.2056 57.8381 52.2056 44.6557 52.2056 32.426H26.9832Z"
                  fill="#262F69"
                />
                <path
                  d="M50.5653 9.75391H47.3006C46.9926 9.75391 46.7432 10.0089 46.7432 10.3232C46.7432 11.0784 46.1391 11.696 45.4008 11.696H33.7636C33.0248 11.696 32.4207 11.0784 32.4207 10.3232C32.4207 10.0089 32.1712 9.75391 31.8632 9.75391H28.5986C27.6993 9.75391 26.9705 10.499 26.9705 11.4177V48.7548H52.1934V11.4177C52.1934 10.499 51.4645 9.75391 50.5653 9.75391Z"
                  fill="white"
                />
                <path
                  d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V43.0087H28.9352V28.5258Z"
                  fill="#262F69"
                />
                <path
                  d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V36.7661L28.9352 28.5258Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M50.2801 43.0087H44.0328L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258V43.0087Z"
                  fill="#0061A8"
                />
                <path
                  d="M50.2801 28.5258V36.7661L39.6077 32.6977L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258Z"
                  fill="#32BCFA"
                />
                <path
                  d="M39.9172 42.6831L11.7505 32.5779V68.9179L39.9172 78.0015V42.6831Z"
                  fill="#31448F"
                />
                <path
                  d="M68.0842 68.9179V32.5779L39.9175 42.6831V78.0015L68.0842 68.9179Z"
                  fill="#262F69"
                />
                <path
                  d="M11.7504 32.5784L1.99976 44.3104L30.6966 54.9142L39.9171 42.6558L11.7504 32.5784Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M68.0842 32.5781L77.8381 44.3101L49.1413 54.9139L39.9175 42.6555L68.0842 32.5781Z"
                  fill="#FABE3D"
                />
                <path
                  d="M68.0842 32.5779L77.8381 44.3099L49.1413 54.9137L39.9175 42.6553L68.0842 32.5779Z"
                  fill="#23A4DE"
                />
                <rect
                  fill="#FFE5C7"
                  height="10.2818"
                  rx="4"
                  transform="matrix(0.762524 -0.64696 0.631676 0.775232 44.3977 27.4504)"
                  width="10.2439"
                />
                <rect
                  fill="#FFB71B"
                  height="19.3572"
                  rx="6"
                  transform="matrix(0.849949 0.526866 -0.514212 0.857663 19.7162 2)"
                  width="19.2099"
                />
                <rect
                  fill="#FFE5C7"
                  height="7.85"
                  rx="3"
                  transform="matrix(0.950312 0.311297 -0.302034 0.953297 58.7117 2.60693)"
                  width="7.74445"
                />
              </svg>
            </span>
          </div>
          <h2
            class="e1byern-el-subtitle"
          >
            App Listing Documentation
          </h2>
          <p
            class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
          >
            As you make changes, you should save your changes in the left hand side menu. You can do this as many times as you like until your app is listed, or live in the AppMarket.
          </p>
          <p
            class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
          >
            When you are ready for your app to be reviewed by a member of our team, click the ‘Submit Review’ button. If you are looking for guidance on what we look for when reviewing app, there is a dedicated page 
            <a>
              here.
            </a>
          </p>
          <p
            class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
          >
            When your app is live, you will need to create revisions to your app for our team to review. You can only have one live revision outstanding at any given time.
          </p>
          <p
            class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
          >
            For guidlines on completing your app listing, visit the documentation link below before getting started.
          </p>
          <button
            class="e1ymtwpu-el-intent-low e1f2ikqj-el-button"
          >
            View Docs
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e20pb60-el-grid"
    >
      <div
        class="eb3z2eu-el-col-split"
      >
        <div
          class="e1ffzzrg-el-mb10 i1x34gqf-icon-container"
        >
          <span
            class="ej9yrfo-el-icon"
            style="font-size: 8.75em;"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 80 80"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M40.3202 12.4506C39.78 9.09117 36.7564 6.5127 33.1128 6.5127C31.7421 6.5127 30.4244 6.87747 29.2808 7.55784C27.5474 4.74831 24.4214 3 20.9454 3C15.5756 3 11.1999 7.2022 11.1914 12.3672C11.1914 12.3992 11.1913 12.4324 11.1925 12.4644C7.74046 13.0235 5.01784 15.9176 5.01213 19.3926C5.00577 23.2666 8.35804 26.418 12.3857 26.418H39.1667C43.1943 26.418 46.5569 23.2666 46.5633 19.3926C46.5691 15.8879 43.812 12.9755 40.3202 12.4506Z"
                fill="white"
              />
              <path
                d="M52.9194 71.8579C52.9194 70.7641 52.0332 69.8779 50.9401 69.8779H50.1045V50.7123C49.0773 50.7123 48.1052 50.3773 47.296 49.8125C46.752 50.196 46.1259 50.4794 45.4318 50.6171C45.1143 50.6806 44.7903 50.7123 44.4701 50.7123C44.2566 50.7123 44.0517 50.6837 43.8439 50.6566L34.6178 50.4821C34.1688 50.6165 33.7019 50.7116 33.209 50.7116C32.7174 50.7116 32.251 50.6166 31.8015 50.4821L22.5753 50.6567C22.3684 50.6838 22.162 50.7124 21.9487 50.7124C21.6305 50.7124 21.3076 50.6806 20.9836 50.6166C20.2915 50.4788 19.6666 50.1961 19.122 49.8126C18.3129 50.3773 17.3427 50.7124 16.3162 50.7124L16.3156 69.878H15.4799C14.3861 69.878 13.5 70.7642 13.5 71.858C13.5 72.9518 14.3861 73.8379 15.4799 73.8379H50.94C52.0332 73.8378 52.9194 72.9517 52.9194 71.8579Z"
                fill="#0061A8"
              />
              <path
                d="M10.2472 55.1588C10.6472 55.2761 11.0512 55.3319 11.4492 55.3319C13.2556 55.3319 14.9242 54.1771 15.4679 52.3889L15.6886 51.6646C15.838 52.9796 16.6208 54.1383 17.7919 54.7868C18.1697 54.9931 18.5726 55.1635 19.0199 55.2506C19.2965 55.3057 19.5722 55.3319 19.8431 55.3319C21.8047 55.3319 23.5582 53.9754 23.9544 52.0138L24.0567 51.5113C24.1616 52.9094 24.9772 54.1411 26.1897 54.8066C26.6765 55.0746 27.2242 55.2515 27.816 55.3103C27.9576 55.3254 28.0984 55.3312 28.2371 55.3312C30.3667 55.3312 32.1914 53.7445 32.4081 51.6182L32.4391 51.3124C32.4775 52.8137 33.3335 54.1022 34.5867 54.7913C35.192 55.1247 35.8811 55.3311 36.6235 55.3311C37.3685 55.3311 38.0568 55.1247 38.6621 54.7913C39.9143 54.1022 40.7712 52.8137 40.8108 51.3124L40.8406 51.6182C41.0576 53.7444 42.8813 55.3312 45.0116 55.3312C45.1513 55.3312 45.2912 55.3254 45.4329 55.3103C46.0238 55.2515 46.5715 55.0746 47.06 54.8066C48.2718 54.1411 49.0883 52.9094 49.1912 51.5113L49.2935 52.0138C49.6915 53.9762 51.444 55.3319 53.4047 55.3319C53.6765 55.3319 53.9512 55.3056 54.2289 55.2506C54.6741 55.1635 55.079 54.9931 55.4551 54.7868C56.6281 54.1382 57.4109 52.9796 57.5603 51.6646L57.7809 52.3889C58.3247 54.1771 59.9932 55.3319 61.8005 55.3319C62.1978 55.3319 62.6017 55.2761 63.0016 55.1588C65.2236 54.5073 66.4863 52.2108 65.8232 50.0307L62.2344 38.2361C61.4847 35.771 59.1759 34.082 56.557 34.082H16.6931C14.0729 34.082 11.7643 35.771 11.0145 38.2361L7.42652 50.0307C6.7634 52.211 8.02633 54.5074 10.2472 55.1588Z"
                fill="#7BC9EB"
              />
              <path
                d="M69.2628 76.3422H40.55C38.0412 76.3361 36.0067 74.3021 36 71.7934V11.2266C36.0067 8.71826 38.0405 6.68447 40.5489 6.67773H69.2639C71.7722 6.68447 73.8059 8.7181 73.8128 11.2263C73.8128 11.2268 73.8128 11.2273 73.8128 11.2278V71.7934C73.8128 71.7939 73.8128 71.7943 73.8128 71.7947C73.8045 74.304 71.7715 76.3361 69.2628 76.3422Z"
                fill="#23A4DE"
                stroke="#262F69"
                stroke-width="2"
              />
              <path
                d="M69.2652 77.3427H40.5476C37.488 77.3352 35.0074 74.8547 35 71.795V64.7686C53.2926 64.7685 58.5345 64.7686 74.8128 64.7686V71.7969C74.8035 74.8566 72.3249 77.3352 69.2652 77.3427Z"
                fill="#31448F"
              />
              <rect
                fill="white"
                height="22"
                rx="11"
                width="22"
                x="42"
                y="15"
              />
              <rect
                fill="#F2F2F2"
                height="8.95809"
                rx="1"
                width="25.0827"
                x="42.168"
                y="48.9014"
              />
              <rect
                fill="#F2F2F2"
                height="3.58324"
                rx="1"
                width="17.9162"
                x="42.168"
                y="43"
              />
              <rect
                fill="#F2F2F2"
                height="6"
                rx="1"
                width="9"
                x="22"
                y="58"
              />
              <g
                clip-path="url(#clip0_7573_98455)"
              >
                <path
                  d="M53.5 24.5L54.5 20.5L49 14L44.5 15L21.5 38L20.5 40.5L27 49L31 48L53.5 24.5Z"
                  fill="white"
                />
                <path
                  d="M21.0508 38.117L43.8641 15.287C44.0991 15.0503 44.4174 14.917 44.7491 14.917H44.7508C45.0824 14.917 45.4008 15.0487 45.6341 15.2837L53.7175 23.367C53.9525 23.602 54.0841 23.9203 54.0841 24.2503C54.0841 24.582 53.9525 24.9003 53.7175 25.1353L30.8841 47.952L21.0508 38.117Z"
                  fill="#FFB71B"
                />
                <path
                  d="M54.6137 21.905L55.4354 21.0834C56.4437 20.0734 57.0004 18.7417 57.0004 17.3334C57.0004 15.8934 56.4404 14.5534 55.4387 13.57C53.4354 11.5467 49.9137 11.5484 47.9154 13.5667L47.0938 14.3884L54.6137 21.905Z"
                  fill="#FFB71B"
                />
                <path
                  d="M20.3735 39.7969L17.0568 50.3769C16.9185 50.8202 17.0368 51.3052 17.3668 51.6335C17.6035 51.8719 17.9235 52.0002 18.2502 52.0002C18.3752 52.0002 18.5002 51.9819 18.6252 51.9435L29.2035 48.6269L20.3735 39.7969Z"
                  fill="#FFB71B"
                />
                <path
                  d="M28.6165 26.6469C28.9365 26.6469 29.2565 26.5253 29.4998 26.2803L37.5698 18.2103C38.0015 17.7803 38.5781 17.6103 39.1432 17.6519L41.1165 15.6769C39.4098 14.7636 37.2398 15.0053 35.8015 16.4419L27.7315 24.5119C27.2432 25.0003 27.2432 25.7919 27.7315 26.2803C27.9765 26.5236 28.2948 26.6469 28.6165 26.6469Z"
                  fill="#FFB71B"
                />
              </g>
              <defs>
                <clippath
                  id="clip0_7573_98455"
                >
                  <rect
                    fill="white"
                    height="40"
                    transform="translate(17 12)"
                    width="40"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
        </div>
        <h2
          class="e1byern-el-subtitle"
        >
          Manage App Listing
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
        >
          This page is the starting point for completing your app listing, and initiating the approvals process for your app to go live with customer data.
        </p>
        <p
          class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
        >
          As an app developer, you need to provide us with a number of peices of information about your integration and have it approved by our team, prior to going live with customer data. For apps that wish to integrate with the AgencyCloud CRM, and be publically listed in the AppMarket, the approvals process is more involved than for simple server-side or single customer private apps. Regardless of your target audience, you should start to complete your app listing as soon as possible.
        </p>
        <p
          class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
        >
          You can check the status of your app listing at any time by using the button below, prior to submitting for approval.
        </p>
        <button
          class="epibvz0-el-intent-secondary e1f2ikqj-el-button"
        >
          Check Status
        </button>
      </div>
      <div
        class="eb3z2eu-el-col-split"
      >
        <div
          class="e1ffzzrg-el-mb10 i1x34gqf-icon-container"
        >
          <span
            class="ej9yrfo-el-icon"
            style="font-size: 8.75em;"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 80 81"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M68.0839 32.5781L39.9172 22.6511L11.7505 32.5781L39.9172 42.6555L68.0839 32.5781Z"
                fill="#23A4DE"
              />
              <path
                d="M68.0842 32.5781L39.9175 22.6511V42.6555L68.0842 32.5781Z"
                fill="#0061A8"
              />
              <path
                d="M50.5783 7.46606H28.611C26.4797 7.46606 24.7457 9.23906 24.7457 11.4178V58.7411C24.7457 60.9199 26.4797 62.6929 28.611 62.6929H50.5783C52.7097 62.6929 54.4441 60.9199 54.4441 58.7411V11.4178C54.4441 9.23906 52.7097 7.46606 50.5783 7.46606V7.46606Z"
                fill="#262F69"
              />
              <path
                d="M32.189 10.3965C31.9798 10.0786 31.8576 9.69614 31.8576 9.28426C31.8576 8.47572 32.3286 7.78095 33.0042 7.46606H28.6113C26.4764 7.46606 24.7455 9.2355 24.7455 11.4178V58.7411C24.7455 60.9235 26.4764 62.6924 28.6113 62.6924H33.2815V13.8597C33.2815 12.6169 32.8676 11.428 32.189 10.3965Z"
                fill="#262F69"
              />
              <path
                d="M26.9832 32.426V58.7411C26.9832 59.6603 27.712 60.4054 28.6108 60.4054H50.578C51.4768 60.4054 52.2056 59.6603 52.2056 58.7411C52.2056 57.8381 52.2056 44.6557 52.2056 32.426H26.9832Z"
                fill="#262F69"
              />
              <path
                d="M50.5653 9.75391H47.3006C46.9926 9.75391 46.7432 10.0089 46.7432 10.3232C46.7432 11.0784 46.1391 11.696 45.4008 11.696H33.7636C33.0248 11.696 32.4207 11.0784 32.4207 10.3232C32.4207 10.0089 32.1712 9.75391 31.8632 9.75391H28.5986C27.6993 9.75391 26.9705 10.499 26.9705 11.4177V48.7548H52.1934V11.4177C52.1934 10.499 51.4645 9.75391 50.5653 9.75391Z"
                fill="white"
              />
              <path
                d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V43.0087H28.9352V28.5258Z"
                fill="#262F69"
              />
              <path
                d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V36.7661L28.9352 28.5258Z"
                fill="#7BC9EB"
              />
              <path
                d="M50.2801 43.0087H44.0328L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258V43.0087Z"
                fill="#0061A8"
              />
              <path
                d="M50.2801 28.5258V36.7661L39.6077 32.6977L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258Z"
                fill="#32BCFA"
              />
              <path
                d="M39.9172 42.6831L11.7505 32.5779V68.9179L39.9172 78.0015V42.6831Z"
                fill="#31448F"
              />
              <path
                d="M68.0842 68.9179V32.5779L39.9175 42.6831V78.0015L68.0842 68.9179Z"
                fill="#262F69"
              />
              <path
                d="M11.7504 32.5784L1.99976 44.3104L30.6966 54.9142L39.9171 42.6558L11.7504 32.5784Z"
                fill="#7BC9EB"
              />
              <path
                d="M68.0842 32.5781L77.8381 44.3101L49.1413 54.9139L39.9175 42.6555L68.0842 32.5781Z"
                fill="#FABE3D"
              />
              <path
                d="M68.0842 32.5779L77.8381 44.3099L49.1413 54.9137L39.9175 42.6553L68.0842 32.5779Z"
                fill="#23A4DE"
              />
              <rect
                fill="#FFE5C7"
                height="10.2818"
                rx="4"
                transform="matrix(0.762524 -0.64696 0.631676 0.775232 44.3977 27.4504)"
                width="10.2439"
              />
              <rect
                fill="#FFB71B"
                height="19.3572"
                rx="6"
                transform="matrix(0.849949 0.526866 -0.514212 0.857663 19.7162 2)"
                width="19.2099"
              />
              <rect
                fill="#FFE5C7"
                height="7.85"
                rx="3"
                transform="matrix(0.950312 0.311297 -0.302034 0.953297 58.7117 2.60693)"
                width="7.74445"
              />
            </svg>
          </span>
        </div>
        <h2
          class="e1byern-el-subtitle"
        >
          App Listing Documentation
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
        >
          As you make changes, you should save your changes in the left hand side menu. You can do this as many times as you like until your app is listed, or live in the AppMarket.
        </p>
        <p
          class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
        >
          When you are ready for your app to be reviewed by a member of our team, click the ‘Submit Review’ button. If you are looking for guidance on what we look for when reviewing app, there is a dedicated page 
          <a>
            here.
          </a>
        </p>
        <p
          class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
        >
          When your app is live, you will need to create revisions to your app for our team to review. You can only have one live revision outstanding at any given time.
        </p>
        <p
          class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
        >
          For guidlines on completing your app listing, visit the documentation link below before getting started.
        </p>
        <button
          class="e1ymtwpu-el-intent-low e1f2ikqj-el-button"
        >
          View Docs
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditTabs should match a snapshot for the permissions tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Foundations REST API. As such, it is worth looking at the
         
        <a
          href="/swagger"
          rel="noopener noreferrer"
          target="_blank"
        >
          API explorer here
           
        </a>
        before procceeding, to investigate which permissions you think you will need.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      />
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      />
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        You should toggle ‘Private App’ if you only want your app to be private to a select group of customers. You should enter their client codes from the installations table as a comma separated list.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Private App
            </label>
            <input
              class="e1ih6lkl-el-toggle-checkbox"
              id="app-edit-is-private-app"
              type="checkbox"
            />
            <label
              class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
              for="app-edit-is-private-app"
            >
              <span
                class="e18omfqv-el-toggle-item"
              >
                Yes
              </span>
              <span
                class="e18omfqv-el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
        <div
          class="ee8eqmp-el-input-wrap-med"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              disabled=""
              id="test-static-id"
              name="limitToClientIds"
              placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Private App Client Ids
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Foundations REST API. As such, it is worth looking at the
       
      <a
        href="/swagger"
        rel="noopener noreferrer"
        target="_blank"
      >
        API explorer here
         
      </a>
      before procceeding, to investigate which permissions you think you will need.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    />
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    />
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      You should toggle ‘Private App’ if you only want your app to be private to a select group of customers. You should enter their client codes from the installations table as a comma separated list.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Private App
          </label>
          <input
            class="e1ih6lkl-el-toggle-checkbox"
            id="app-edit-is-private-app"
            type="checkbox"
          />
          <label
            class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
            for="app-edit-is-private-app"
          >
            <span
              class="e18omfqv-el-toggle-item"
            >
              Yes
            </span>
            <span
              class="e18omfqv-el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
      <div
        class="ee8eqmp-el-input-wrap-med"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            disabled=""
            id="test-static-id"
            name="limitToClientIds"
            placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Private App Client Ids
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditTabs should match a snapshot for the pipleines tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1de2pym-el-flex-justify-center ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
      >
        <div>
          <p
            class="e15ggth7-el-body-text"
          >
            Loading
          </p>
          <div
            class="ebhrnzh-el-loader-container"
          >
            <div
              class="eq1m1jz-el-loader"
            >
              <div
                class="exikdu1-el-loader-moving-bar"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1de2pym-el-flex-justify-center ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
    >
      <div>
        <p
          class="e15ggth7-el-body-text"
        >
          Loading
        </p>
        <div
          class="ebhrnzh-el-loader-container"
        >
          <div
            class="eq1m1jz-el-loader"
          >
            <div
              class="exikdu1-el-loader-moving-bar"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
